# alpacker

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust-ci.yml
alpacker/: Cargo.toml
alpacker-packer/: Cargo.toml
alpacker-packer/src/: lib.rs  tar.rs  transform.rs  zstd.rs
alpacker-packer/src/pack/: bzip2.rs  codec.rs  lz4.rs  mod.rs  tar.rs  zstd.rs
alpacker-packer/src/transform/: mod.rs  oxipng_transform.rs
alpacker-packer/tests/: common.rs  oxipng.rs  tar.rs
alpacker-tests/: Cargo.toml
alpacker-tests/samples/: test.tar.zst
alpacker-tests/src/: lib.rs
alpacker/src/: asset.rs  fs.rs  lib.rs  tar.rs  zstd.rs
alpacker/src/data/: aseprite.rs  image.rs  mod.rs  raylib.rs
alpacker/src/pack/: bzip2.rs  codec.rs  lz4.rs  mod.rs  tar.rs  zstd.rs
alpacker/tests/: common.rs  image.rs  tar.rs
alpacker/tests/samples/: invalid.tar.zst  manifest.json
test-samples/: manifest.json  test.tar.zst
