[workspace]
resolver = "2"
members = ["alpacker", "alpacker-packer"]

[workspace.dependencies]
alpacker = { path = "./alpacker", default-features = false }
alpacker-packer = { path = "./alpacker-packer", default-features = false }

serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
serde_json = "1.0"
image = { version = "0.25", default-features = false }

zstd = "0.13"
bzip2 = "0.5"
lz4_flex = { version = "0.11", default-features = false, features = ["frame"] }
tar = "0.4"

rstest = "0.25"
