[package]
name = "alpacker-packer"
version = "0.1.0"
edition = "2024"

[dependencies]
alpacker = { workspace = true, default-features = false }

serde = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }

oxipng = "9.1.4"
glob = "0.3.2"

[features]
default = ["zstd", "tar"]
zstd = ["alpacker/zstd"]
tar = ["alpacker/tar"]

[dev-dependencies]
testdir = { workspace = true }
