[package]
name = "alpacker-packer"
version = "0.1.0"
edition = "2024"

[dependencies]
alpacker = { workspace = true, default-features = false }

serde = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }

oxipng = { version = "9.1", optional = true, features = ["zopfli"] }
glob = { version = "0.3", optional = true }

[features]
default = ["zstd", "tar", "oxipng"]

oxipng = ["dep:oxipng", "glob"]
zstd = ["alpacker/zstd"]
tar = ["alpacker/tar"]

[dev-dependencies]
testdir = { workspace = true }
