[package]
name = "alpacker-packer"
version = "0.1.0"
edition = "2024"

[dependencies]
alpacker = { workspace = true, default-features = false, features = ["fs"] }

serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

zstd = { workspace = true, optional = true }
tar = { workspace = true, optional = true }

oxipng = { version = "9.1", optional = true, features = ["zopfli"] }
glob = { version = "0.3", optional = true }

[dev-dependencies]
testdir = "0.9"

[features]
default = ["tarzst", "oxipng"]

oxipng = ["dep:oxipng", "glob"]

zstd = ["alpacker/zstd", "dep:zstd"]
tar = ["alpacker/tar", "dep:tar"]
tarzst = ["tar", "zstd"]

[[test]]
name = "oxipng"
required-features = ["oxipng"]

[[test]]
name = "tar"
required-features = ["tarzst"]
