[package]
name = "alpacker-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
alpacker = { workspace = true, features = [
  "tarzst",
  "image",
  "collect-errors",
] }
alpacker-packer = { workspace = true }

image = { workspace = true, features = ["png"] }
rstest = { workspace = true }
