[package]
name = "alpacker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

zstd = { workspace = true, optional = true }
bzip2 = { workspace = true, optional = true }
tar = { workspace = true, optional = true }

image = { workspace = true, optional = true }
aseprite = { version = "0.1", optional = true }
twox-hash = { version = "2.1", optional = true }
raylib = { version = "5.5", optional = true, default-features = false }

[dev-dependencies]
rstest = { workspace = true }
image = { workspace = true, features = ["png"] }

[features]
default = ["collect-errors", "tarzst", "twox-hash", "fs"]
nobuild = ["raylib?/nobuild"]
fs = []
collect-errors = []
tarzst = ["tar", "zstd"]
tarbz2 = ["tar", "bzip2"]

[[test]]
name = "common"
required-features = ["tarzst", "fs"]

[[test]]
name = "image"
required-features = ["tarzst", "fs", "image"]

[[test]]
name = "tar"
required-features = ["tarzst", "fs"]
